--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-Jinja2==2.5.5
-Pygments==1.4
-Sphinx==1.0.7
-distribute==0.6.10
-docutils==0.7
-html5lib==0.90
-python-dateutil==1.5
-wsgiref==0.1.2
+alabaster==0.7.3
+Babel==1.3
+docutils==0.12
+html5lib==0.999
+Jinja2==2.7.3
+MarkupSafe==0.23
+Pygments==2.0.2
+python-dateutil==2.4.2
+pytz==2015.2
+snowballstemmer==1.2.0
+Sphinx==1.3.1
+sphinx-rtd-theme==0.1.7
